[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "string-cleaner"
version = "0.1.0"
description = "A Python library for general-purpose string cleaning and normalization."
authors = [{ name = "Zazralt Magic", email = "zazralt@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/zazralt/string-cleaner"
Repository = "https://github.com/zazralt/string-cleaner"

[tool.setuptools]
py-modules = ["name_cleaner"]
